@@ -4,8 +4,7 @@ export DEB_BUILD_MAINT_OPTIONS=hardening=+pie,+bindnow
 
 CONFIGUREARGS := --libdir=/usr/lib --libexecdir=/usr/lib \
 		--enable-ldap --enable-curl \
-		--enable-smartcard --enable-pkcs11 \
-		--with-default-pkcs11=/usr/lib/$(DEB_HOST_MULTIARCH)/opensc-pkcs11.so \
+		--enable-pkcs11 \
 		--enable-mediation --enable-medsrv --enable-medcli \
 		--enable-openssl --enable-agent \
 		--enable-ctr --enable-ccm --enable-gcm --enable-addrblock \
@@ -15,7 +14,8 @@ CONFIGUREARGS := --libdir=/usr/lib --libexecdir=/usr/lib \
 		--enable-sql --enable-integrity-test \
 		--enable-ha \
 		--enable-led --enable-gcrypt \
-		--enable-test-vectors --enable-nat-transport \
+		--enable-test-vectors \
+		--enable-xauth-eap --enable-xauth-pam \
 		--disable-blowfish --disable-des # BSD-Young license
 	#--with-user=strongswan --with-group=nogroup
 	#	--enable-kernel-pfkey --enable-kernel-klips \
@@ -46,7 +46,7 @@ ifeq ($(DEB_BUILD_ARCH_OS),kfreebsd)
 	# http://wiki.strongswan.org/projects/strongswan/wiki/FreeBSD
 	CONFIGUREARGS += --disable-kernel-netlink \
 		--enable-kernel-pfkey --enable-kernel-pfroute \
-		--disable-pluto --with-group=wheel
+		--with-group=wheel
 endif
 
 override_dh_auto_configure:
@@ -76,7 +76,6 @@ ifeq ($(DEB_BUILD_ARCH_OS),linux)
 	# handle Linux-only plugins
 	dh_install -p libstrongswan usr/lib/ipsec/plugins/libstrongswan-dhcp.so
 	dh_install -p libstrongswan usr/lib/ipsec/plugins/libstrongswan-farp.so
-	dh_install -p libstrongswan usr/lib/ipsec/plugins/libstrongswan-xauth.so
 	dh_install -p libstrongswan usr/lib/ipsec/plugins/libstrongswan-kernel-netlink.so
 endif
 
@@ -98,7 +97,6 @@ endif
 		-Xlibstrongswan-kernel \
 		-Xlibstrongswan-dhcp.so \
 		-Xlibstrongswan-farp.so \
-		-Xlibstrongswan-xauth.so \
 	 	-Xlibstrongswan-padlock.so
 
 	# add additional files not covered by upstream makefile...
