@@ -1,4 +1,0 @@
-usr/lib/ipsec/pluto
-usr/lib/ipsec/_pluto_adns
-usr/lib/ipsec/whack
-usr/share/man/man8/pluto.8
